fix spacing in listing categories

--- a/web/src/scss/pages/listing-page.scss
+++ b/web/src/scss/pages/listing-page.scss
@@ -2,20 +2,19 @@
   ul {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    margin: 0 -10px;
 
     li {
       flex-basis: 100%;
+      margin: 0 10px 20px 10px;
 
       @media (min-width: 576px) {
-        flex-basis: 48%;
+        flex-basis: calc(50% - 20px);
       }
 
       @media (min-width: 992px) {
-        flex-basis: 32%;
+        flex-basis: calc(33.333% - 20px);
       }
-
-      margin-bottom: 20px;
 
       a {
         display: block;
